# Lichtfeld-ml-sharp-Plugin

./: README.md  __init__.py  plugin.toml  pyproject.toml  sharp_processor.py
ml-sharp/: pyproject.toml
ml-sharp/src/sharp/cli/: predict.py  render.py
ml-sharp/src/sharp/utils/: vis.py
panels/: __init__.py  sharp_video.py
