[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp_4d"
version = "0.1.0"
description = "4D Gaussian Splatting from Video using SHARP"
authors = [
    {name = "LichtFeld Studio Authors"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.2",
    "torchvision>=0.23.0",
    "timm",
    "gsplat",
    "imageio",
    "imageio-ffmpeg",
    "pillow-heif",
    "plyfile",
    "scipy",
    "tqdm",
    "click"
]

[tool.lichtfeld]
# Важно: имя должно совпадать с папкой или быть уникальным ID
display_name = "Sharp 4D Video"
description = "Generate 4D Gaussian Splats from video input"
version = "0.1.0"
author = "LichtFeld Studio Authors"
# Точка входа для новой системы плагинов. 
# Так как в __init__.py есть функции on_load/on_unload, 
# мы указываем корневой модуль.
entry_point = "." 
icon = "assets/icon.png"
category = "Generators"

[tool.lichtfeld.permissions]
allow_network = true
allow_file_access = true

# Секция для совместимости с локальными пакетами
[tool.hatch.build.targets.wheel.force-include]
"ml-sharp" = "ml-sharp"
