[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp_4d"
version = "0.1.0"
description = "4D Gaussian Splatting from Video using SHARP"
authors = [
    {name = "LichtFeld Studio Authors"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.2",
    "torchvision>=0.23.0",
    "timm",
    "gsplat",
    "imageio",
    "imageio-ffmpeg",
    "pillow-heif",
    "plyfile",
    "scipy",
    "tqdm",
    "click"
]

[tool.lichtfeld]
# Основные настройки
display_name = "Sharp 4D Video"
description = "Generate 4D Gaussian Splats from video input"
version = "0.1.0"
author = "LichtFeld Studio Authors"
entry_point = "." 
icon = "assets/icon.png"
category = "Generators"

# ВОТ ЭТОГО НЕ ХВАТАЛО (настройки жизненного цикла):
auto_start = true
hot_reload = true

[tool.lichtfeld.permissions]
allow_network = true
allow_file_access = true

# Секция для включения локальной папки ml-sharp в путь
[tool.hatch.build.targets.wheel.force-include]
"ml-sharp" = "ml-sharp"
